<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>haiticore</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Haiti Core</name>
	<description>Core shared functionality across shared OpenMRS implementations in Haiti</description>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-haiticore.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-haiticore.git</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-haiticore/</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>Modules</name>
			<url>https://openmrs.jfrog.io/artifactory/modules/</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>https://openmrs.jfrog.io/artifactory/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<properties>
		<openMRSVersion>1.10.4</openMRSVersion>
		<metadatadeployVersion>1.8.1</metadatadeployVersion>
		<addresshierarchyVersion>2.10</addresshierarchyVersion>
		<emrapiVersion>1.21.0</emrapiVersion>
		<reportingVersion>0.11.0</reportingVersion>
		<calculationVersion>1.2</calculationVersion>
		<serializationxstreamVersion>0.2.12</serializationxstreamVersion>
		<metadatamappingVersion>1.3.1</metadatamappingVersion>
		<metadatasharingVersion>1.2.2</metadatasharingVersion>
		<providermanagementVersion>2.5.0</providermanagementVersion>
		<jacksonVersion>1.8.3</jacksonVersion>
	</properties>

	<dependencies>
		<!-- Begin OpenMRS core -->

		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openMRSVersion}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <scope>provided</scope>
        </dependency>

		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openMRSVersion}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.test</groupId>
			<artifactId>openmrs-test</artifactId>
			<version>${openMRSVersion}</version>
			<type>pom</type>
			<scope>test</scope>
		</dependency>

		<!-- End OpenMRS core -->

		<!-- OpenMRS modules -->

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatadeploy-api</artifactId>
			<version>${metadatadeployVersion}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatadeploy-api-1.10</artifactId>
			<version>${metadatadeployVersion}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>emrapi-api</artifactId>
			<version>${emrapiVersion}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>emrapi-api-1.10</artifactId>
			<version>${emrapiVersion}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>addresshierarchy-api</artifactId>
            <version>${addresshierarchyVersion}</version>
            <scope>provided</scope>
        </dependency>

		<!-- OpenMRS modules required just to fire up application context during testing -->

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>reporting-api</artifactId>
			<version>${reportingVersion}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>calculation-api</artifactId>
			<version>${calculationVersion}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>serialization.xstream-api</artifactId>
			<version>${serializationxstreamVersion}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>serialization.xstream-api-1.10</artifactId>
			<version>${serializationxstreamVersion}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatamapping-api</artifactId>
			<version>${metadatamappingVersion}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatasharing-api</artifactId>
			<version>${metadatasharingVersion}</version>
			<scope>test</scope>
		</dependency>

		<!-- Other test dependencies -->
		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>providermanagement-api</artifactId>
			<version>${providermanagementVersion}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
			<version>${jacksonVersion}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jacksonVersion}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<configuration>
						<includeEmptyDirs>true</includeEmptyDirs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</argLine>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://openmrs.jfrog.io/artifactory/public</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://openmrs.jfrog.io/artifactory/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
